@@ -1,3 +1,7 @@
+Update for version 8.3.3 - 27-Jul-15 (PLL)
+    acsrej/mainrej.c
+    acsrej/rej_command.c
+
 Update for version 8.3.2 - 02-Mar-15 (PLL)
     acsrej/mainrej.c
 
