@@ -10,16 +10,19 @@
 # include "acserr.h"
 # include "acsrej.h"
 
+static void FreeNames (char *);
+
 int status = 0;             /* zero is OK */
+
 
 int main (int argc, char **argv) {
 
-    char    input[ACS_LINE*2], output[ACS_LINE];    /* file names */
+    char    *input, output[ACS_LINE];    /* file names */
     clpar   par;                                    /* parameters used */
     int     newpar[MAX_PAR+1];          /* user specifiable parameters */
     char    mtype[SZ_STRKWVAL+1];      /* Role of exposure in association */
 
-    int rej_command (int, char **, char *, char *, clpar *, int []);
+    int rej_command (int, char **, char **, char *, clpar *, int []);
     int AcsRej (char *, char *, char *, clpar *, int []);
     void WhichError (int);
 
@@ -28,8 +31,12 @@ int main (int argc, char **argv) {
     /* Initialize mtype to NULL to signal no change in ASN_MTYP for output*/
     mtype[0] = '\0';
 
+    /* Allocate later */
+    input = NULL;
+
     /* Get input and output file names and switches in the command line. */
-    if (rej_command (argc, argv, input, output, &par, newpar)) {
+    if (rej_command (argc, argv, &input, output, &par, newpar)) {
+        FreeNames(input);
         exit (ERROR_RETURN);
     }
 
@@ -46,7 +53,16 @@ int main (int argc, char **argv) {
 
     if (status) {
         WhichError (status);
+        FreeNames(input);
         exit (ERROR_RETURN);
-    } else
+    } else {
+        FreeNames(input);
         exit (0);
+    }
+}
+
+
+static void FreeNames (char *input) {
+    if (input != NULL)
+        free(input);
 }
